--- a/Frontend-Templte/index.html
+++ b/Frontend-Templte/index.html
@@ -76,7 +76,7 @@
                                 <div class="main-menu">
                                     <div class="navbar navbar-cus">
                                         <div class="navbar-header">
-                                            <a href="index.html" class="navbar-brand">FAHAD</a>
+                                            <a href="index.html" class="navbar-brand">FA</a>
                                             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                                                 <span class="sr-only">Toggle navigation</span>
                                                 <span class="icon-bar"></span>
